CPO-8 - Before deleting case-ids, check case ids exist in DB