@@ -8,14 +8,18 @@ import org.mockito.Captor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import uk.gov.hmcts.reform.cpo.data.CasePaymentOrderEntity;
 import uk.gov.hmcts.reform.cpo.exception.CasePaymentOrderCouldNotBeFoundException;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.UUID;
 
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.anyList;
+import static org.mockito.ArgumentMatchers.anyLong;
+import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
@@ -72,6 +76,8 @@ public class CasePaymentOrdersRepositoryImplTest {
     @Test
     void testDeleteByCaseIds() throws Exception {
         when(casePaymentOrdersJpaRepository.deleteByCaseIdIsIn(anyList())).thenReturn(CASE_IDS.size());
+        when(casePaymentOrdersJpaRepository.findAllByCaseId(anyLong()))
+                .thenReturn(Collections.singletonList(new CasePaymentOrderEntity()));
 
         casePaymentOrdersRepository.deleteByCaseIds(CASE_IDS);
 
@@ -91,9 +97,23 @@ public class CasePaymentOrdersRepositoryImplTest {
 
     @Test
     void testExceptionThrownIfUnknownCaseIdCannotBeDeleted() {
-        when(casePaymentOrdersJpaRepository.deleteByCaseIdIsIn(anyList())).thenReturn(0);
-        assertThrows(CasePaymentOrderCouldNotBeFoundException.class, () -> {
-            casePaymentOrdersRepository.deleteByCaseIds(List.of(123L));
-        });
+        when(casePaymentOrdersJpaRepository.findAllByCaseId(anyLong())).thenReturn(Collections.emptyList());
+        assertThrows(CasePaymentOrderCouldNotBeFoundException.class,
+            () -> casePaymentOrdersRepository.deleteByCaseIds(List.of(123L)));
+        verify(casePaymentOrdersJpaRepository, never()).deleteByCaseIdIsIn(anyList());
+    }
+
+    @Test
+    void testDeleteByCaseIdsMixOfExistingAndNonExistentCaseIds() {
+        // Simulate 3 records existing with case id
+        when(casePaymentOrdersJpaRepository.findAllByCaseId(anyLong()))
+                .thenReturn(Collections.singletonList(new CasePaymentOrderEntity()));
+        when(casePaymentOrdersJpaRepository.deleteByCaseIdIsIn(anyList())).thenReturn(3);
+
+        List<Long> caseIdToDelete = List.of(RandomUtils.nextLong());
+        casePaymentOrdersRepository.deleteByCaseIds(caseIdToDelete);
+
+        verify(casePaymentOrdersJpaRepository).deleteByCaseIdIsIn(casePaymentOrderCaseIdCaptor.capture());
+        assertTrue(casePaymentOrderCaseIdCaptor.getValue().containsAll(caseIdToDelete));
     }
 }
